kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: moe-trainer-lab
    version: v1
  name: moe-trainer-lab
