kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moe-trainer-service
  namespace: moe-trainer-lab
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: moe-trainer
  type: LoadBalancer
